# erisml-lib

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AI_SAFETY_STACK.md  ANNOUNCEMENT.md  BIP_Fusion_Theory_Whitepaper.md  CITATION.cff  Cross_Model_Bell_Protocol_v1.1.docx  Cross_Model_Bell_Protocol_v1.2.docx  Cross_Model_Bell_Protocol_v1.docx  DEME - Ethics Modules (EM) for Democratically Governed Autonomous Agents - AAIF.md  DEME_3.0_-_Tensorial_Ethics_for_Complex_Multi-Agent_Systems.md  DEME_3.0_Tensorial_Ethics_Vision.md  DEME_EFM_Design_Guide_v0.1.md  DEVELOPMENT_TASKS.md  DISCUSSIONS_WELCOME.md  GUASS_SAI_Sprint_Plan.md  GUASS_v7_SAI_HARDENED.md  Home.md  IMPROVEMENTS_01.md  MANIFEST.in  Noether_Ethics_Paper.tex  QND_COMMUTATOR_ANNOUNCEMENT.docx  QND_COMMUTATOR_ANNOUNCEMENT.md  QND_EXPERIMENT_ANNOUNCEMENT.md  QND_EXPERIMENT_README.md  QND_Experiment_Report.docx  QND_Experiment_Report.md  QND_TEST_PROTOCOL_README.md  QUICKSTART.md  README.md  README_LLM_EVALUATION.md  REVIEWER_RESPONSES.md  SQND_ROSETTA_STONE_PRIMER.md  Staff_Mathematician_Job_Posting.md  Tensorial Ethics.docx  The_Geometry_of_Good_塞翁失马.docx  analyze_qnd_results.py  analyze_qnd_results_v2.py  bip_audit_artifact.json  (+30 more)
.claude/: settings.local.json
applications/: Anesthesia_Delivery_Whitepaper.md  Autonomous_Vehicle_Collision_Avoidance_Whitepaper.md  Building_HVAC_Optimization_Whitepaper.md
configs/: bond_index_calibration.yaml
data/: Item-1.jsonl  qnd_full-final-ahb_results.analysis.json  qnd_full-final-ahb_results.json
docs/: CNAME  DEME_2.0_D4_Integration.md  I-EIP_Monitor_Whitepaper.md  README.md  books.json  index.html  moralvector_reference.md  moralvector_v2_architecture.md
examples/: train_v3_agent.py
qnd_bell_v3_results/: batch_20251230_235812.json
qnd_commutator_results/: qnd_commutator_results.json
qnd_fuzz_results/: fuzz_batch_20251231_010247.json  qnd_fuzz_analysis.json
qnd_interference_results/: batch_20251231_011951.json  qnd_interference_results.json
qnd_nbody_results/: batch_20251231_005229.json  qnd_nbody_results.json  specs_20251231_005229.json
scripts/: bond_index_llm_evaluation.ipynb  check-groq-connection.py  (+6 more)
(+734 files in other folders)
